--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Data.SQL/TOne.WhS.CodePreparation.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Data.SQL/TOne.WhS.CodePreparation.Data.SQL.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChangedCustomerCountryDataManager.cs" />
     <Compile Include="ChangedSaleZoneRoutingProductsDataManager.cs" />
     <Compile Include="ChangedSaleZoneServicesDataManager.cs" />
     <Compile Include="ChangedSaleRateDataManager.cs" />
