--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Business/TOne.WhS.CodePreparation.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Business/TOne.WhS.CodePreparation.Business.csproj
@@ -98,8 +98,10 @@
     <Compile Include="MobileZoneRateLocator.cs" />
     <Compile Include="NewZoneRateLocator.cs" />
     <Compile Include="NotificationContext.cs" />
+    <Compile Include="PriceListCountryManager.cs" />
     <Compile Include="PriceListZoneRoutingProductsManager.cs" />
     <Compile Include="PriceListZoneServicesManager.cs" />
+    <Compile Include="ProcessCountriesContext.cs" />
     <Compile Include="ProcessCountryZonesRoutingProductsContext.cs" />
     <Compile Include="ProcessCountryZonesServicesContext.cs" />
     <Compile Include="RatePreviewManager.cs" />
