--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Data/TOne.WhS.CodePreparation.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Data/TOne.WhS.CodePreparation.Data.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CodePrepDataManagerFactory.cs" />
+    <Compile Include="IChangedCustomerCountryDataManager.cs" />
     <Compile Include="IChangedSaleZoneRoutingProductsDataManager.cs" />
     <Compile Include="IChangedSaleZoneServicesDataManager.cs" />
     <Compile Include="IChangedSaleRateDataManager.cs" />
