--- a/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Business/TOne.WhS.DBSync.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Business/TOne.WhS.DBSync.Business.csproj
@@ -56,6 +56,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Data.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Data.Postgres">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Data.Postgres.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Data.SQL, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Data.SQL.dll</HintPath>
@@ -151,6 +154,7 @@
     <Compile Include="SwitchMigration\SwitchMappingRulesManager.cs" />
     <Compile Include="SwitchMigration\SwitchMappingRulesMigrator.cs" />
     <Compile Include="SwitchMigration\SwitchMigrationParser.cs" />
+    <Compile Include="SwitchMigration\TelesSwitchMigrationParser.cs" />
     <Compile Include="SwitchMigration\TelesSwitchParser.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -182,6 +186,10 @@
       <Project>{36ea3b9c-5ae0-4fe5-8ec2-8bfd1655776b}</Project>
       <Name>TOne.WhS.RouteSync.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.RouteSync.Idb\TOne.WhS.RouteSync.Idb.csproj">
+      <Project>{d961eebd-058d-4419-b6ca-e1d53412c159}</Project>
+      <Name>TOne.WhS.RouteSync.Idb</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TOne.WhS.RouteSync.IVSwitch\TOne.WhS.RouteSync.IVSwitch.csproj">
       <Project>{c0da1a40-bf0e-4657-941e-e245bb82269f}</Project>
       <Name>TOne.WhS.RouteSync.IVSwitch</Name>
@@ -197,6 +205,14 @@
     <ProjectReference Include="..\TOne.WhS.RouteSync.Radius\TOne.WhS.RouteSync.Radius.csproj">
       <Project>{0f005ef5-f26b-4f30-ae68-ce841d744e68}</Project>
       <Name>TOne.WhS.RouteSync.Radius</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.RouteSync.TelesIdb.Postgres\TOne.WhS.RouteSync.TelesIdb.Postgres.csproj">
+      <Project>{1ba64324-8371-4689-8168-83f03e3ccbcf}</Project>
+      <Name>TOne.WhS.RouteSync.TelesIdb.Postgres</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.RouteSync.TelesIdb\TOne.WhS.RouteSync.TelesIdb.csproj">
+      <Project>{2a18b2c2-13a4-4598-8d7a-be977bc200a8}</Project>
+      <Name>TOne.WhS.RouteSync.TelesIdb</Name>
     </ProjectReference>
     <ProjectReference Include="..\TOne.WhS.Routing.Business\TOne.WhS.Routing.Business.csproj">
       <Project>{923447e8-0d0b-4296-976a-8f486a8694d3}</Project>
