Add Disputee Cases
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43264

--- a/Demo.project/Code/Demo.Module.Business/Demo.Module.Business.csproj
+++ b/Demo.project/Code/Demo.Module.Business/Demo.Module.Business.csproj
@@ -81,6 +81,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DisputeCaseManager.cs" />
     <Compile Include="BuildingManager.cs" />
     <Compile Include="CityManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
