--- a/Demo.project/Code/Demo.Module.Web/Demo.Module.Web.csproj
+++ b/Demo.project/Code/Demo.Module.Web/Demo.Module.Web.csproj
@@ -128,6 +128,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Demo_Module\Constant\ModuleConfig.js" />
+    <Content Include="Demo_Module\Directives\DisputeCase\demo-module-disputecase-grid.js" />
+    <Content Include="Demo_Module\Directives\DisputeCase\Templates\DisputeCaseGridTemplate.html" />
     <Content Include="Demo_Module\Directives\Building\demo-module-building-grid.js" />
     <Content Include="Demo_Module\Directives\Building\demo-module-building-selector.js" />
     <Content Include="Demo_Module\Directives\Building\Templates\BuildingGridTemplate.html" />
@@ -146,6 +148,7 @@
     <Content Include="Demo_Module\Directives\Student\demo-module-student-grid.js" />
     <Content Include="Demo_Module\Directives\User\templates\demo-module-user-grid.js" />
     <Content Include="Demo_Module\Directives\User\templates\UserGridTemplate.html" />
+    <Content Include="Demo_Module\Services\APIServices\DisputeCaseAPIService.js" />
     <Content Include="Demo_Module\Services\APIServices\BuildingAPIService.js" />
     <Content Include="Demo_Module\Services\APIServices\CityAPIService.js" />
     <Content Include="Demo_Module\Services\APIServices\PaymentConfigsAPIService.js" />
@@ -159,7 +162,9 @@
     <Content Include="Demo_Module\Templates\CodeGroupTemplate.xlsx" />
     <Content Include="Demo_Module\Views\BuildingEditor.html" />
     <Content Include="Demo_Module\Views\BuildingEditorController.js" />
+    <Content Include="Demo_Module\Views\DisputeCaseManagement.html" />
     <Content Include="Demo_Module\Views\BuildingManagement.html" />
+    <Content Include="Demo_Module\Views\DisputeCaseManagementController.js" />
     <Content Include="Demo_Module\Views\BuildingManagementController.js" />
     <Content Include="Demo_Module\Views\CityManagement.html" />
     <Content Include="Demo_Module\Views\CityManagementController.js" />
@@ -180,6 +185,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Controllers\DisputeCaseController.cs" />
     <Compile Include="Controllers\BuildingController.cs" />
     <Compile Include="Controllers\CityController.cs" />
     <Compile Include="Controllers\PymentConfigsController.cs" />
