--- a/Retail/Code/Retail.MultiNet.Business/Retail.MultiNet.Business.csproj
+++ b/Retail/Code/Retail.MultiNet.Business/Retail.MultiNet.Business.csproj
@@ -134,6 +134,7 @@
     <Compile Include="ExtendedInfo\MultiNetCompanyExtendedInfoDefinition.cs" />
     <Compile Include="InvoiceAccountStatusChangedHandler.cs" />
     <Compile Include="InvoiceGeneratorActionAccountTypeCondition.cs" />
+    <Compile Include="MultiNetAccountManager.cs" />
     <Compile Include="MultiNetPartnerCondition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MultiNetSubscriberInvoiceGenerator.cs" />
@@ -152,6 +153,10 @@
     <ProjectReference Include="..\Retail.BusinessEntity.MainExtensions\Retail.BusinessEntity.MainExtensions.csproj">
       <Project>{e4c4ef32-adfb-48c3-a3d3-489a4fc53b89}</Project>
       <Name>Retail.BusinessEntity.MainExtensions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Retail.MultiNet.APIEntities\Retail.MultiNet.APIEntities.csproj">
+      <Project>{bb188405-2bcb-410c-918b-6187cbebf857}</Project>
+      <Name>Retail.MultiNet.APIEntities</Name>
     </ProjectReference>
     <ProjectReference Include="..\Retail.MultiNet.Entities\Retail.MultiNet.Entities.csproj">
       <Project>{73608c81-84ad-480a-a988-74244ee9c8f8}</Project>
