--- a/Retail/Code/Retail.MultiNet.Web/Retail.MultiNet.Web.csproj
+++ b/Retail/Code/Retail.MultiNet.Web/Retail.MultiNet.Web.csproj
@@ -122,10 +122,10 @@
       <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-  <ItemGroup>
+    <Compile Include="Constants.cs" />
+    <Compile Include="Controllers\MultiNetAccountInfoController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Retail_MultiNet\Reports\Reporting.aspx.cs">
       <DependentUpon>Reporting.aspx</DependentUpon>
@@ -180,6 +180,18 @@
     <EmbeddedResource Include="Retail_MultiNet\Reports\BranchSubscriberInvoiceReport.rdlc" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Vanrise\Code\Vanrise.Web.Base\Vanrise.Web.Base.csproj">
+      <Project>{c527c7b2-a481-4d1d-b25a-4a540e812153}</Project>
+      <Name>Vanrise.Web.Base</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Retail.MultiNet.APIEntities\Retail.MultiNet.APIEntities.csproj">
+      <Project>{bb188405-2bcb-410c-918b-6187cbebf857}</Project>
+      <Name>Retail.MultiNet.APIEntities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Retail.MultiNet.Business\Retail.MultiNet.Business.csproj">
+      <Project>{b72910b9-b085-4a14-8bb7-816d0a28a6b9}</Project>
+      <Name>Retail.MultiNet.Business</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Retail.MultiNet.Entities\Retail.MultiNet.Entities.csproj">
       <Project>{73608c81-84ad-480a-a988-74244ee9c8f8}</Project>
       <Name>Retail.MultiNet.Entities</Name>
