--- a/CarrierPortal/Code/CP.MultiNet.Business/CP.MultiNet.Business.csproj
+++ b/CarrierPortal/Code/CP.MultiNet.Business/CP.MultiNet.Business.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9BDE9944-B0A4-4A1F-A4EF-C0004E06C296}</ProjectGuid>
+    <ProjectGuid>{FEE825E7-59CC-45C6-9BD8-5658C99CAEE7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PartnerPortal.Invoice.MainExtensions</RootNamespace>
-    <AssemblyName>PartnerPortal.Invoice.MainExtensions</AssemblyName>
+    <RootNamespace>CP.MultiNet.Business</RootNamespace>
+    <AssemblyName>CP.MultiNet.Business</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -34,36 +34,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Retail.BusinessEntity.APIEntities">
-      <HintPath>..\..\..\Retail\Code\Output\Retail.BusinessEntity.APIEntities.dll</HintPath>
+    <Reference Include="Retail.MultiNet.APIEntities">
+      <HintPath>..\..\..\Retail\Code\Output\Retail.MultiNet.APIEntities.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.0.0\lib\net45\System.Web.Http.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Vanrise.Common">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Vanrise.Common.Business, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Vanrise.Common.Business">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Common.Business.dll</HintPath>
     </Reference>
-    <Reference Include="Vanrise.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Vanrise.Entities">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
-    </Reference>
-    <Reference Include="Vanrise.Invoice.Entities">
-      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Invoice.Entities.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Security.Business">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Security.Business.dll</HintPath>
@@ -73,19 +61,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Constants.cs" />
-    <Compile Include="InvoiceViewerTypeGridAction\DownloadAttachmentAction.cs" />
-    <Compile Include="InvoiceViewerTypeGridAction\DownloadAttachmentActionController.cs" />
-    <Compile Include="InvoiceViewerTypeGridAction\DownloadAttachmentActionManager.cs" />
-    <Compile Include="InvoiceViewerTypeGridAction\DefaultInvoiceViewerExtendedSettings.cs" />
-    <Compile Include="Invoice\PartnerInvoiceQueryInterceptor.cs" />
+    <Compile Include="AccountAdditionalInfoManager.cs" />
+    <Compile Include="AccountAdditionalInfoTileDefinitionSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Vanrise\Code\Vanrise.Web.Base\Vanrise.Web.Base.csproj">
-      <Project>{c527c7b2-a481-4d1d-b25a-4a540e812153}</Project>
-      <Name>Vanrise.Web.Base</Name>
-    </ProjectReference>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\PartnerPortal.CustomerAccess.Business\PartnerPortal.CustomerAccess.Business.csproj">
       <Project>{c4ac9650-72a5-4470-a2d4-2d22c504bf0f}</Project>
       <Name>PartnerPortal.CustomerAccess.Business</Name>
@@ -93,14 +76,6 @@
     <ProjectReference Include="..\PartnerPortal.CustomerAccess.Entities\PartnerPortal.CustomerAccess.Entities.csproj">
       <Project>{3f63f33b-1977-4593-8d79-f5bfbf84cb19}</Project>
       <Name>PartnerPortal.CustomerAccess.Entities</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PartnerPortal.Invoice.Business\PartnerPortal.Invoice.Business.csproj">
-      <Project>{6e8b5ccf-9ba8-4f47-bc21-e7f13f770b5a}</Project>
-      <Name>PartnerPortal.Invoice.Business</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PartnerPortal.Invoice.Entities\PartnerPortal.Invoice.Entities.csproj">
-      <Project>{50261e8c-7f79-437b-9eb2-8423d8eb7080}</Project>
-      <Name>PartnerPortal.Invoice.Entities</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
