--- a/CarrierPortal/Code/PartnerPortal.CustomerAccess.Business/PartnerPortal.CustomerAccess.Business.csproj
+++ b/CarrierPortal/Code/PartnerPortal.CustomerAccess.Business/PartnerPortal.CustomerAccess.Business.csproj
@@ -34,6 +34,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Retail.BusinessEntity.APIEntities">
+      <HintPath>..\..\..\Retail\Code\Output\Retail.BusinessEntity.APIEntities.dll</HintPath>
+    </Reference>
+    <Reference Include="Retail.BusinessEntity.Entities">
+      <HintPath>..\..\..\Retail\Code\Output\Retail.BusinessEntity.Entities.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
@@ -75,10 +81,14 @@
     <Compile Include="AccountStatementExtendedSettingsContext.cs" />
     <Compile Include="AccountStatementManager.cs" />
     <Compile Include="AnalyticManager.cs" />
+    <Compile Include="DIDManager.cs" />
     <Compile Include="LiveBalanceManager.cs" />
     <Compile Include="AnalyticDefinitionSettings.cs" />
+    <Compile Include="DIDTileDefinitionSettings.cs" />
     <Compile Include="LiveBalanceTileDefinitionSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RetailAccountInfoManager.cs" />
+    <Compile Include="RetailAccountInfoTileDefinitionSettings.cs" />
     <Compile Include="RetailAccountUserManager.cs" />
   </ItemGroup>
   <ItemGroup>
