--- a/Vanrise/Code/Vanrise.Data.Postgres/Vanrise.Data.Postgres.csproj
+++ b/Vanrise/Code/Vanrise.Data.Postgres/Vanrise.Data.Postgres.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasePostgresDataManager.cs" />
+    <Compile Include="INpgBulkCopy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
