--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Idb/TOne.WhS.RouteSync.Idb.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Idb/TOne.WhS.RouteSync.Idb.csproj
@@ -47,6 +47,9 @@
     <Reference Include="Vanrise.Data">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Data.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Data.Postgres">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Data.Postgres.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Entities">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
     </Reference>
