--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.TelesIdb/TOne.WhS.RouteSync.TelesIdb.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.TelesIdb/TOne.WhS.RouteSync.TelesIdb.csproj
@@ -48,6 +48,9 @@
     <Reference Include="Vanrise.Data">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Data.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Data.Postgres">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Data.Postgres.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
