Bug 2745: Add Compression file import option to Adatapers
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43271

--- a/Vanrise/Code/Vanrise.Integration.Web/Vanrise.Integration.Web.csproj
+++ b/Vanrise/Code/Vanrise.Integration.Web/Vanrise.Integration.Web.csproj
@@ -107,6 +107,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="Integration\Constants\CompressionTypeEnum.js" />
     <Content Include="Integration\Constants\MappingResultEnum.js" />
     <Content Include="Integration\Constants\ExecutionStatusEnum.js" />
     <Content Include="Integration\Constants\ModuleConfig.js" />
