--- a/Vanrise/Code/Vanrise.Integration.Adapters.SFTPReceiveAdapter/Vanrise.Integration.Adapters.SFTPReceiveAdapter.csproj
+++ b/Vanrise/Code/Vanrise.Integration.Adapters.SFTPReceiveAdapter/Vanrise.Integration.Adapters.SFTPReceiveAdapter.csproj
@@ -74,6 +74,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vanrise.Common\Vanrise.Common.csproj">
+      <Project>{1a350b7c-28ea-4824-b9a0-c60ad25f0ea9}</Project>
+      <Name>Vanrise.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Integration.Adapters.SFTPReceiveAdapter.Arguments\Vanrise.Integration.Adapters.SFTPReceiveAdapter.Arguments.csproj">
       <Project>{e820f143-f40e-4465-a14c-270edeb8a6b3}</Project>
       <Name>Vanrise.Integration.Adapters.SFTPReceiveAdapter.Arguments</Name>
