--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Entities/TOne.WhS.SupplierPriceList.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Entities/TOne.WhS.SupplierPriceList.Entities.csproj
@@ -59,6 +59,7 @@
     <Compile Include="PreviewData\CodePreview.cs" />
     <Compile Include="CodesByCode.cs" />
     <Compile Include="Enumerations.cs" />
+    <Compile Include="PreviewData\PreviewSummary.cs" />
     <Compile Include="PreviewData\ZoneServicePreview.cs" />
     <Compile Include="PreviewData\SPLPreviewQuery.cs" />
     <Compile Include="PreviewData\CountryPreview.cs" />
