Add SupplierPricelistPreviewSummary manager and data manger files
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43274

--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Business/TOne.WhS.SupplierPriceList.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Business/TOne.WhS.SupplierPriceList.Business.csproj
@@ -106,6 +106,7 @@
     <Compile Include="PriceListZoneServiceManager.cs" />
     <Compile Include="PriceListRateManager.cs" />
     <Compile Include="ProcessCountryZonesServicesContext.cs" />
+    <Compile Include="SupplierPricelistPreviewSummaryManager.cs" />
     <Compile Include="SupplierPriceListProcessBPSettings.cs" />
     <Compile Include="SupplierZonesServicesPreviewManager.cs" />
     <Compile Include="SupplierOtherRatesPreviewManager.cs" />
