--- a/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/TOne.WhS.SupplierPriceList.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.SupplierPriceList.Web/TOne.WhS.SupplierPriceList.Web.csproj
@@ -174,6 +174,8 @@
     <Content Include="WhS_SupplierPriceList\Directives\MainExtensions\SupplierPriceListTemplate\SupplierPriceListConfiguration\whs-spl-supplierpricelistconfiguration-basic.js" />
     <Content Include="WhS_SupplierPriceList\Directives\SupplierPriceListPreviewSection\Templates\SupplierPriceListPreviewSectionTemplate.html" />
     <Content Include="WhS_SupplierPriceList\Directives\SupplierPriceListPreviewSection\whs-spl-supplierpricelistpreview-section.js" />
+    <Content Include="WhS_SupplierPriceList\Directives\SupplierPricelistPreviewSummary\Templates\SupplierPricelistPreviewSummary.html" />
+    <Content Include="WhS_SupplierPriceList\Directives\SupplierPricelistPreviewSummary\whs-spl-supplierpricelistpreview-summary.js" />
     <Content Include="WhS_SupplierPriceList\Directives\ZoneServicesPreview\Templates\SupplierPriceListZoneServicesPreviewGridTemplate.html" />
     <Content Include="WhS_SupplierPriceList\Directives\ZoneServicesPreview\whs-spl-zoneservicespreview-grid.js" />
     <Content Include="WhS_SupplierPriceList\Directives\OtherRatesPreview\Templates\SupplierPriceListOtherRatesPreviewGridTemplate.html" />
@@ -226,6 +228,7 @@
     <Content Include="WhS_SupplierPriceList\Views\SupplierPriceList.html" />
     <Content Include="WhS_SupplierPriceList\Views\SupplierPriceListController.js" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
