Implementing sub accounts tile and refactoring multinet additional info tile
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43289

--- a/Retail/Code/Retail.BusinessEntity.APIEntities/Retail.BusinessEntity.APIEntities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.APIEntities/Retail.BusinessEntity.APIEntities.csproj
@@ -44,9 +44,14 @@
     <Reference Include="Vanrise.Entities">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.GenericData.Entities">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.GenericData.Entities.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountClientDetail.cs" />
     <Compile Include="ClientBalanceAccountInfo.cs" />
+    <Compile Include="ClientGenericFieldDefinitionInfo.cs" />
     <Compile Include="ClientInvoiceAccountInfo.cs" />
     <Compile Include="ClientRetailProfileAccountInfo.cs" />
     <Compile Include="DIDClientDetail.cs" />
