--- a/CarrierPortal/Code/CP.MultiNet.Web/CP.MultiNet.Web.csproj
+++ b/CarrierPortal/Code/CP.MultiNet.Web/CP.MultiNet.Web.csproj
@@ -122,6 +122,7 @@
     <Content Include="CP_MultiNet\Elements\AccountAdditionalInfo\Directives\Templates\AccountAdditionalInfoTileRuntimeSettings.html" />
     <Content Include="CP_MultiNet\Elements\AccountAdditionalInfo\Services\APIService\RetailAccountInfoAPIService.js" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
