--- a/CarrierPortal/Code/PartnerPortal.CustomerAccess.Entities/PartnerPortal.CustomerAccess.Entities.csproj
+++ b/CarrierPortal/Code/PartnerPortal.CustomerAccess.Entities/PartnerPortal.CustomerAccess.Entities.csproj
@@ -68,6 +68,9 @@
     <Compile Include="DID\DIDAppQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetailAccount.cs" />
+    <Compile Include="RetailAccountInfo\AccountAppQuery.cs" />
+    <Compile Include="RetailAccountInfo\AccountGridField.cs" />
+    <Compile Include="RetailAccountInfo\AccountGridFieldInput.cs" />
     <Compile Include="RetailAccountInfo\RetailAccountInfo.cs" />
   </ItemGroup>
   <ItemGroup />
