Add multinet config file
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43316

--- a/CarrierPortal/Code/CarrierPortal.Web/CarrierPortal.Web.csproj
+++ b/CarrierPortal/Code/CarrierPortal.Web/CarrierPortal.Web.csproj
@@ -466,6 +466,7 @@
     </None>
     <Content Include="Web.config.PartnerPortal.exclude" />
     <Content Include="Web.config.RingoPortal.exclude" />
+    <Content Include="Web.config.MultinetPortal.exclude" />
     <None Include="Web.config.Release.exclude">
       <DependentUpon>Web.config.exclude</DependentUpon>
     </None>
