Export Rates by Account
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43328

--- a/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
@@ -34,11 +34,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Aspose.Cells">
+      <HintPath>..\..\..\Vanrise\Code\Resources\DLLs\Aspose.Cells.dll</HintPath>
+    </Reference>
     <Reference Include="PartnerPortal.CustomerAccess.Entities">
       <HintPath>..\..\..\CarrierPortal\Code\Output\PartnerPortal.CustomerAccess.Entities.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
