Implementing change status after provisioning
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43341

--- a/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
+++ b/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
@@ -203,6 +203,10 @@
     <Compile Include="PackageTypes\PricingPackageSettings.cs" />
     <Compile Include="PackageTypes\VolumePackageSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Provisioning\ChangeStatusDefinitionPostAction.cs" />
+    <Compile Include="Provisioning\ChangeStatusPostAction.cs" />
+    <Compile Include="Provisioning\RevertStatusDefinitionPostAction.cs" />
+    <Compile Include="Provisioning\RevertStatusPostAction.cs" />
     <Compile Include="RecurringChargeEvaluators\OneTimeRecurringChargeEvaluator.cs" />
     <Compile Include="RecurringChargeEvaluators\OneTimeRecurringChargeEvaluatorDefinitionSettings.cs" />
     <Compile Include="RecurringChargeEvaluators\PeriodicRecurringChargeEvaluator.cs" />
