--- a/Retail/Code/Retail.BusinessEntity.MainActionBPs.Activities/Retail.BusinessEntity.MainActionBPs.Activities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.MainActionBPs.Activities/Retail.BusinessEntity.MainActionBPs.Activities.csproj
@@ -70,6 +70,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExecuteAccountPorvisionPostAction.cs" />
     <Compile Include="ExecuteAccountProvisioner.cs" />
     <Compile Include="CreateStatusBillingTransaction.cs" />
     <Compile Include="LoadEntity.cs" />
