Adding SwitchCaseFieldFormula Enhancing DataRecordTypeFieldFormula Evaluation @DataRecordTypeManager_BuildClassDefinition
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43361

--- a/Vanrise/Code/Vanrise.GenericData.Business/Vanrise.GenericData.Business.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.Business/Vanrise.GenericData.Business.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="DataRecordFieldFormulaCalculateValueContext.cs" />
     <Compile Include="DataRecordFieldFormulaGetDependentFieldsContext.cs" />
+    <Compile Include="DataRecordTypeFieldFormulaCalculateValueContext.cs" />
     <Compile Include="DataStorage\CreateTempStorageContext.cs" />
     <Compile Include="DataRecordFieldChoiceManager.cs" />
     <Compile Include="DataRecordFieldFormulaConvertFilterContext.cs" />
